@startuml

title __FITNESSTRACKER's Class Diagram__\n

  namespace com.example.fitnesstracker {
    class com.example.fitnesstracker.CreateWorkout {
        + applyText()
        + onCreateOptionsMenu()
        + onOptionsItemSelected()
        + onWorkoutClick()
        + onWorkoutLongClick()
        + openDialog()
        + showMessage()
        + viewWorkouts()
        # onCreate()
        - initRecyclerView()
    }
  }
  

  namespace com.example.fitnesstracker {
    class com.example.fitnesstracker.Exercise {
        - isChecked : boolean
        - position : int
        + getPosition()
        + isChecked()
        + setChecked()
        + setPosition()
    }
  }
  

  namespace com.example.fitnesstracker {
    class com.example.fitnesstracker.Graph {
        ~ graphView : GraphView
        ~ listExercises : ArrayList<String>
        ~ listWorkouts : ArrayList<String>
        ~ series : LineGraphSeries<DataPoint>
        ~ spnExercises : Spinner
        ~ spnWorkouts : Spinner
        + onCreateOptionsMenu()
        + onOptionsItemSelected()
        # onCreate()
        - populateGraph()
        - preLoadGraph()
        - preLoadGraphExercise()
    }
  }
  

  namespace com.example.fitnesstracker {
    class com.example.fitnesstracker.MainActivity {
        - btnCreate : Button
        - btnProgress : Button
        - btnTrack : Button
        # onCreate()
        - CreateWorkout()
        - TrackWorkout()
        - YourProgress()
    }
  }
  

  namespace com.example.fitnesstracker {
    class com.example.fitnesstracker.TrackWorkout {
        + onCreateOptionsMenu()
        + onOptionsItemSelected()
        + onWorkoutClick()
        + onWorkoutLongClick()
        # onCreate()
        - initRecyclerView()
    }
  }
  

  namespace com.example.fitnesstracker {
    class com.example.fitnesstracker.WorkoutActivity {
        ~ workoutid : int
        - recyclerView : RecyclerView
        + onExerciseClick()
        + onExerciseLongClick()
        + onOptionsItemSelected()
        # onCreate()
        - initRecyclerView()
    }
  }
  

  namespace com.example.fitnesstracker {
    class com.example.fitnesstracker.WorkoutEditActivity {
        ~ workoutid : int
        + applyText()
        + ediText()
        + onCreateOptionsMenu()
        + onExerciseClick()
        + onExerciseLongClick()
        + onOptionsItemSelected()
        + openDialog()
        + showMessage()
        + viewExercises()
        # onCreate()
        - initRecyclerView()
    }
  }
  

  com.example.fitnesstracker.CreateWorkout .up.|> com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter.OnWorkoutListener
  com.example.fitnesstracker.CreateWorkout .up.|> com.example.fitnesstracker.Dialogs.WorkoutAddDialog.WorkoutAddDialogListener
  com.example.fitnesstracker.CreateWorkout -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.fitnesstracker.CreateWorkout o-- com.example.fitnesstracker.Database.DatabaseHelper : db
  com.example.fitnesstracker.Graph -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.fitnesstracker.Graph o-- com.example.fitnesstracker.Database.DatabaseHelper : db
  com.example.fitnesstracker.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.fitnesstracker.MainActivity o-- com.example.fitnesstracker.Database.DatabaseHelper : myDB
  com.example.fitnesstracker.TrackWorkout .up.|> com.example.fitnesstracker.AdaptersFolder.WorkoutAdapter.OnWorkoutListener
  com.example.fitnesstracker.TrackWorkout -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.fitnesstracker.TrackWorkout o-- com.example.fitnesstracker.Database.DatabaseHelper : db
  com.example.fitnesstracker.WorkoutActivity .up.|> com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter.OnExerciseListener
  com.example.fitnesstracker.WorkoutActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.fitnesstracker.WorkoutActivity o-- com.example.fitnesstracker.Database.DatabaseHelper : db
  com.example.fitnesstracker.WorkoutEditActivity .up.|> com.example.fitnesstracker.AdaptersFolder.ExerciseAdapter.OnExerciseListener
  com.example.fitnesstracker.WorkoutEditActivity .up.|> com.example.fitnesstracker.Dialogs.ExerciseAddDialog.ExerciseAddDialogListener
  com.example.fitnesstracker.WorkoutEditActivity .up.|> com.example.fitnesstracker.Dialogs.ExerciseEditDialog.ExerciseEditDialogListener
  com.example.fitnesstracker.WorkoutEditActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.fitnesstracker.WorkoutEditActivity o-- com.example.fitnesstracker.Database.DatabaseHelper : db


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
